@@ -2,6 +2,9 @@ Version 0.6.1~dev
 
 	* Fixed check result log message to use 'message' instead of 'check_message', closes: #2898.
 	* Updated database schema on spv-schema.sql file (rewrote all file).
+	* Changed calls to importer to use new spv webservices located on
+	services.py. Modified internal structure to store object_infos and
+	check_infos.
 
 Version 0.6.0 Released on 2010/01/12
 
